@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Text-TabularDisplay
-version:      1.19
+version:      1.20
 version_from: TabularDisplay.pm
 installdirs:  site
 requires:
