@@ -14,12 +14,12 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e75743a3cec080ff2373e3a3d8078c388b7f006c Changes
-SHA1 51c599b3e81abceae9fa2c77ce41abf9acf0270e MANIFEST
-SHA1 955e64271dd4f9983792918290268b63138c885e META.yml
+SHA1 209e7d8d21b10a69455a1be28f018002a617254e Changes
+SHA1 862ce29aa418f46057c5ac5c7588d3f94b67eda2 MANIFEST
+SHA1 dd593752b42de5977c0832631de033615dfe05e3 META.yml
 SHA1 ba8a5ba85c935cbbc0fb38c1f3ed52ba6f64d22f Makefile.PL
 SHA1 29ee8fdfc61b4d528f1d42760d70fde8fb9f1449 README
-SHA1 cfaecdda49b3d152055e067fcbfd810dc79ace9e TabularDisplay.pm
+SHA1 f89691293e3cffd4802c017891400083ecdf46c9 TabularDisplay.pm
 SHA1 525fd7ab95ed8eaac68e5748e9490b6491088b43 examples/aliases
 SHA1 bdedfae939f401c15575b17ec0b4cffe66cda546 examples/dump-passwd.pl
 SHA1 b1ad3c0cfe0c64ce014091d0a529feac0f167a6e examples/mysql.pl
@@ -38,10 +38,11 @@ SHA1 607d0a3c9c5576aa50aaed378aa043e6959648ce t/11.t
 SHA1 45aa5baa4177ffce05f3a9704eb76f83a9da0a95 t/12.t
 SHA1 02bd5df3f87dc45543abc034aadd79493a6c210d t/13.t
 SHA1 f7a8aab645dc4e5dc05d2928ef7c2e5e53dc66fa t/14.t
+SHA1 af74e86e4ef2b77eadf6c094695d0b043d13d00a t/15.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBUCqmzsinjrVhZaoRAmmXAJ0bSrueW4EWdyDrvurYCUoTO2MwkQCgmveh
-/QqXjMXkW6cUZnDT+/R0g5U=
-=tBx6
+iD8DBQFBdswKzsinjrVhZaoRAp8sAJ4lX1oxQ5inrp62GSI9WkXpHPpLPACdFB5q
+UooHBg4R/OEUkPd+tk7Twys=
+=V4tp
 -----END PGP SIGNATURE-----
